use all viewport

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Global Warming Game"
-    />
+    <meta name="description" content="Global Warming Game" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -21,6 +18,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Global Warming Game</title>
+    <style>
+      body {
+        background: #000;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
